# WeatherAwsSmallApp

./: .gitignore  README.md  pyproject.toml
infrastructure/: main.tf  terraform.tfstate  terraform.tfstate.backup
infrastructure/services/cloud_watch/: variables.tf  watch.tf
infrastructure/services/dynamodb/: dynamodb.tf  variables.tf
infrastructure/services/glue/: glue.tf  variables.tf
infrastructure/services/glue_crawler/: crawler.tf  variables.tf
infrastructure/services/iam/: policies.tf  policies_attachments.tf  roles.tf  variables.tf
infrastructure/services/lambda/: lambda.tf  lambda_layer.tf  layers.tf  mapping.tf  variables.tf  zipping.tf
infrastructure/services/s3/: s3.tf  veriables.tf
infrastructure/services/sqs/: sqs.tf  veriables.tf  write_sqs.tf
src/externalAPI/: requirements.txt
src/externalAPI/python/: get_visitor_data.py
src/externalAPI/python/externalAPI/: get_visitor_data.py
src/functions/: enrich_and_copy.py  get_weather_data.py  put_weather_dynamo.py  select_and_que.py
src/infrastructure/: main.tf  terraform.tfstate  terraform.tfstate.backup  variables.tf
src/infrastructure/services/dynamodb/: dynamodb.tf  variables.tf
src/infrastructure/services/iam/: policies.tf  policies_attachments.tf  roles.tf  variables.tf
src/infrastructure/services/lambda/: lambda.tf  variables.tf
src/infrastructure/services/s3/: s3.tf  veriables.tf
src/infrastructure/services/sqs/: sqs.tf
src/scripts/: process_data.py
tests/: test_external_api.py
